...
        style="@style/formLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectionURL" />

    <EditText
        android:id="@+id/url"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:layout_below="@+id/urlLabel"
        android:hint="@string/connectionURLDesc"
        android:inputType="textUri"/>

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alternateUrlDesc"
        android:text="@string/connectionUsername"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        style="@style/formInput"
        android:inputType="text"
        android:layout_below="@id/usernameLabel"
        android:hint="@string/connectionUsernameDesc"/>

...
